css/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: 'Open Sans', sans-serif;
}

.header-container {
    max-width: 1000px;
    margin-left: auto;
    margin-right: auto;
}

.page-container {
    max-width: 900px;
    margin-left: auto;
    margin-right: auto;
}

.btn {
    padding: 10px 20px;
    background-color: #0061ff;
    border: none;
    color: white;
    transition: filter .5s;
}

.btn:hover {
    cursor: pointer;
    filter: brightness(130%);
}

a {
    text-decoration: none;
    color: black;
}

li {
    list-style: none;
}

/* /Utilities */

nav {
    position: fixed;
    width: 100%;

}

nav .nav-inner {
    width: 100%;
    padding: 0 10px;
    background-color: white;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

nav .nav-inner #logo {
    padding: 20px 0;
}

nav .nav-inner #logo img {
    width: 100%;
}

nav .nav-inner ul li {
    padding: 24px 0;
    display: inline-block;
}

nav .nav-inner ul li:hover {
    border-bottom: 2px solid black;
    cursor: pointer;

}

nav .nav-inner .nav-left-menu,
.nav-right-menu {
    display: flex;
    align-items: center;
    gap: 30px;
}

nav .nav-inner .nav-left-menu ul li {
    margin-right: 30px;
}

nav .nav-inner .nav-right-menu ul li {
    margin-left: 30px;
}

/* /Navbar */

header {
    width: 100%;
    padding-top: 70px;
    margin-bottom: 5em;
    background-color: #b4d0e7;
}

header .header-container h1 {
    padding: 30px 0;
    font-size: 3.5em;

}

header .header-container .header-info {
    display: flex;
}

header .header-container .header-info .header-text {
    width: 30%;
}

header .header-container .header-info .header-text .fa-arrow-down {
    margin-top: 40px;
    font-size: 2.5em;
}

header .header-container .header-info .header-image {
    width: 70%;
    margin-bottom: -70px;
}

header .header-container .header-info .header-text .free-trial-btn {
    margin: 20px 0;
}

header .header-container .header-info .header-image img {
    width: 100%;
}

/* /Header */

main .business-plans h2 {
    padding: 2em 0;
}

main .business-plans form {
    display: inline-block;
    font-size: 0.8em;
}

main .business-plans form label {
    padding-right: 30px;
}

main .plans-container {
    padding: 20px 0;
    display: flex;
    justify-content: space-between;
}

main .plans-container .plan {
    border: 1px solid #d0d0d3;
    width: 30%;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
}

main .plans-container .plan .single-title {
    padding: 5px;
    text-align: center;
    border-bottom: 1px solid #d0d0d3;
}

main .plans-container .plan .plan-lists-container {
    padding: 20px 20px;
    font-size: .8em;
}

main .plans-container .plan .title-plan ul li {
    padding: 5px;
}

main .plans-container .plan .title-plan ul li:first-child {
    font-size: 1.5em;
}

main .plans-container .plan .title-plan ul li:last-child {
    color: #d0d0d3;
}

main .plans-container .plan .plan-list .users,
.storage-space,
.functions {
    display: flex;
    padding: 10px 0;
    gap: 10px;
}

main .plans-container .plan .button-container {
    padding: 10px;
    text-align: center;

}

main .plans-container .plan .buy-now {
    padding: 20px 0 10px 0;
}

main .plans-container .plan .buy-now a {
    text-decoration: underline;
    color: #0061ff;
}

main .plans-container .plan .parting-row {
    width: 50px;
    margin: 20px 0;
    border-bottom: 1px solid #d0d0d3;
}

main .plans-container .plan .plan-points .plan-point-item {
    display: flex;
    padding: 10px 20px;
    gap: 10px;
}

main .plans-container .plan .plan-points .plan-point-item .plan-point-icon i {
    color: #0061ff;
}

main .contact-container {
    border: 1px solid #d0d0d3;
    width: 100%;
    display: flex;
    flex-direction: column;
}

main .contact-container .single-title {
    padding: 5px;
    text-align: center;
    border-bottom: 1px solid #d0d0d3;
}

.contact-container .plan-lists-container {
    padding: 20px;
    display: flex;
    justify-content: space-around;
    align-items: center;
}

.contact-container .plan-lists-container .title-plan {
    width: 70%;
}

.contact-container .plan-lists-container .title-plan ul li {
    padding: 10px;
}

.contact-container .plan-lists-container .title-plan ul li:first-child {
    font-size: 1.5em;
}

.contact-container .plan-lists-container .title-plan ul li:last-child {
    padding-top: 30px;
}

.contact-container .plan-lists-container .sell-office {
    align-self: flex-start;
}

main .dropbox-partner {
    margin: 100px 0;
    width: 100%;
    display: flex;
}

main .dropbox-partner .partner-image {
    width: 65%;
}

main .dropbox-partner .partner-image img {
    width: 100%;
}

main .dropbox-partner .partner-text {
    width: 35%;
    padding: 40px;
}

main .dropbox-partner .partner-text h3 {
    padding: 10px 0;
}

main .dropbox-partner .partner-text .btn-discover {
    padding: 10px 20px;
    margin: 20px;
    background-color: #ffffff;
    border: 1px solid black;
}

main .dropbox-partner .partner-text .btn-discover:hover {
    cursor: pointer;
}

main .business-operations h2 {
    padding-bottom: 40px;
}

main .business-operations .cards {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
}

main .business-operations .cards .card {
    width: 30%;
    padding-bottom: 40px;
}

main .business-operations .cards .card img {
    width: 100%;
}

main .business-operations .cards .card .card-text {
    font-size: .8em;
}

main .business-operations .cards .card .card-text h3 {
    padding-bottom: 20px;
}

main .customers-discover {
    width: 50%;
}

main .customers-discover h2 {
    padding: 50px 0;
}

main .customers-discover span a {
    text-decoration: underline;
    color: #0061ff;
    font-size: .8em;
}

main .carousel {
    margin-top: 100px;
    display: flex;
}



.carousel-square {
    width: 50%;
    height: 50%;
    display: flex;
    align-items: center;
    justify-content: center;
}

.carousel-square img {
    width: 50%;
}

.carousel-square img path {
    fill: white;
}

main .carousel .carousel-left {
    width: calc(100vw / 3);
    height: calc(100vw / 3);
    display: flex;
    flex-wrap: wrap;
}

main .carousel .carousel-left .one {
    background-color: #a2d39b;
    border: 10px solid #d2eace;
}

main .carousel .carousel-left .two {
    background-color: #61082b;
}

main .carousel .carousel-left .three {
    background-color: #0093ce;
}

main .carousel .carousel-left .four {
    background-color: #ff1c1c;
}

main .carousel .carousel-center {
    background-color: #f5f5f5;
    width: calc(100% / 3);
    padding: 70px;
    display: flex;
    flex-grow: 1;
    flex-direction: column;
}

main .carousel .carousel-center > * {
    margin-bottom: 50px;
}

main .carousel .carousel-center hr {
    width: 20%;
    border: 1px solid #d0d0d3;
}

main .carousel .carousel-center .carousel-info p:first-of-type {
    margin-bottom: 50px;
}

main .carousel .carousel-right {
    width: calc(100vw / 3);
    height: calc(100vw / 3);
    display: flex;
    flex-wrap: wrap;
}

main .carousel .carousel-right .five {
    background-color: #d5001f;
}

main .carousel .carousel-right .six {
    background-color: #b4d0e7;
}

main .carousel .carousel-right .seven {
    background-color: #0d2481;
}

main .carousel .carousel-right .height {
    background-color: #ffd830;

